# adept-agentic-framework-core

./: .gitignore  CLAUDE.md  LICENSE  README.md  activate-podman-env.sh  bootstrap-podman-env.sh  configure-podman-registries.sh  pyproject.toml  todo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: PLATFORM_ENGINEER_FROM_SCRATCH.md  PLATFORM_ENGINEER_ONBOARDING.md  PODMAN_BOOTSTRAP_NOTES.md  PODMAN_BUGFIX_PROCESS.md  PODMAN_DOCUMENTATION_INDEX.md  PODMAN_IMPLEMENTATION_PROGRESS.md  PODMAN_QUICKSTART.md  PODMAN_TESTING.md  agentic-framework-page.html  agentic-framework-tutorial.md  podman-deployment-guide.md  test-procedures-podman.md
docs/tutorial-branches/chapter-00-introduction/: .env.example  .gitignore  BUGFIX_EMBEDDING_INTERNAL_LLM.md  INTERNAL_LLM_COMPATIBILITY_GUIDE.md  INTERNAL_LLM_IMPLEMENTATION.md  INTERNAL_LLM_QUICKSTART.md  README.md  TROUBLESHOOTING.md  TROUBLESHOOTING_INTERNAL_LLM.md  check-service-logs.sh  configure-sudo-nopasswd.sh  docker-compose.podman.yaml  docker-compose.yaml  pyproject.toml  quick-log-check.sh  restart-chapter0.sh  start-chapter-resources-podman.sh  verify-services.sh
docs/tutorial-branches/chapter-00-introduction/scripts/: compare_local_vs_docker.sh  test_docker_connection.sh  test_in_docker.sh  test_internal_llm_endpoint.py  test_langchain_internal_llm.py  test_openai_sdk_direct.py
docs/tutorial-branches/chapter-00-introduction/src/agentic_framework_pkg/core/: embedding_config.py  llm_agnostic_layer.py
docs/tutorial-branches/chapter-00-introduction/src/agentic_framework_pkg/mcp_server/tools/: knowledge_base_tool.py
docs/tutorial-branches/chapter-00-introduction/src/agentic_framework_pkg/scientific_workflow/: langchain_agent.py
docs/tutorial-branches/chapter-00-introduction/src/agentic_framework_pkg/streamlit_app/: app.py
docs/tutorial-branches/chapter-00-introduction/tests/: README.md  conftest.py  test_embedding_internal_llm.py  test_langchain_agent_llm_config.py  test_llm_configuration.py  test_user_scenario_o3_mini.py
docs/tutorial-branches/chapter-01-main/: Dockerfile.mcp_server  README.md  docker-compose.podman.yaml  docker-compose.yaml  pyproject.toml  start-chapter-resources-podman.sh
docs/tutorial-branches/chapter-01-main/docs/: CHANGELOG_SESSION_2026-01-27.md  HPC_SSH_TOOL_MVP_PLAN.md  HPC_SSH_TOOL_USAGE.md  INTERNAL_LLM_IMPLEMENTATION.md
docs/tutorial-branches/chapter-01-main/src/agentic_framework_pkg/core/: llm_agnostic_layer.py
docs/tutorial-branches/chapter-01-main/src/agentic_framework_pkg/mcp_server/: main.py
docs/tutorial-branches/chapter-01-main/src/agentic_framework_pkg/mcp_server/tools/: csv_rag_tool.py  hpc_ssh_tool.py
docs/tutorial-branches/chapter-01-main/src/agentic_framework_pkg/scientific_workflow/: langchain_agent.py  mcp_langchain_tools.py
docs/tutorial-branches/chapter-01-main/src/agentic_framework_pkg/streamlit_app/: app.py
docs/tutorial-branches/chapter-01-main/tests/: README.md  test_hpc_ssh_tool.py  test_internal_llm_config.py  test_llm_agnostic_layer.py  test_mcp_tools_smoke.py
docs/tutorial-branches/chapter-02-hpc-mcp-server-with-cot/: Dockerfile.hpc  README.md  chapter-description.md  docker-compose.podman.yaml  pyproject.toml  start-chapter-resources-podman.sh
docs/workshop/: .gitignore  ADEPT-Workshop-2Hour.md  ADEPT-Workshop-Diagrams.md  Makefile  README.md  package.json  render-diagrams.py  render-diagrams.sh
scripts/: README.md  cleanup-stale-processes.sh
tests/: README.md
tests/podman/: README.md  quick-test.sh  test-podman-deployment.sh
(+67 files in other folders)
